Migrate users of String.format()
Use String.formatted() instead.

Change-Id: If53644f5de294fb79c5e90952e875654fb4db348
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>